# swagger.json
@@ -289,6 +289,167 @@
                     }
                 ]
             }
+        },
+        "/books":{
+            "post": {
+                "tags": [
+                    "Book Store App: Add Book"
+                ],
+                "description": "Add a New Book",
+                "summary": "Add a Book",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": " Book ",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "author": {
+                                    "type": "string"
+                                },
+                                "title": {
+                                    "type": "string"
+                                },
+                                "image": {
+                                    "type": "string"
+                                },
+                                "quantity": {
+                                    "type": "string"
+                                },
+                                "price": {
+                                    "type": "string"
+                                },
+                                "description": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Book Added successfully"
+                    },
+                    "400": {
+                        "description": "Failed to Add a Book"
+                    }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
+            },
+            "get": {
+                "tags": [
+                    "Book-Store App: Retrive All Books"
+                ],
+                "summary": "Retrive all Books",
+                "description": "Retrive all Books",
+                "responses": {
+                    "200": {
+                        "description": "Retrive Books successfully"
+                    },
+                    "404": {
+                        "description": "Failed To Find Book"
+                    },
+                    "500": {
+                        "description": "Internal server error..!"
+                    }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
+            }
+        },
+        "/books/{id}":{
+            "put": {
+                "tags": [
+                    "Book Store App: Update A Perticular Book"
+                ],
+                "summary": "Update an existing Book",
+                "description": "find by ID and update a Perticular Book",
+                "operationId": "updatebooks",
+                "parameters": [
+                    {
+                        "name": " Books ",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "author": {
+                                    "type": "string"
+                                },
+                                "title": {
+                                    "type": "string"
+                                },
+                                "image": {
+                                    "type": "string"
+                                },
+                                "quantity": {
+                                    "type": "string"
+                                },
+                                "price": {
+                                    "type": "string"
+                                },
+                                "description": {
+                                    "type": "string"
+                                } 
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Book updated successfully"
+                    },
+                    "404": {
+                        "description": "Failed To Update Book"
+                    },
+                    "500": {
+                        "description": "could not find Book"
+                    }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Book Store App: Delete A Perticular Book"
+                ],
+                "summary": "Delete a Book",
+                "description": "Delete a Book by its Id",
+                "operationId": "Delete Book",
+                "responses": {
+                    "200": {
+                        "description": "Book deleted successfully"
+                    },
+                    "404": {
+                        "description": "Failed To Delete Book"
+                    },
+                    "500": {
+                        "description": "could not Find Book"
+                    }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
+            }
         }
     },
     "securityDefinitions": {
